# wwdctools

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: tests.yml
scripts/: test.sh
src/wwdctools/: __init__.py  cli.py  downloader.py  logger.py  models.py  session.py  transcript.py  utils.py  webvtt_utils.py
src/wwdctools/cli/: __init__.py  code.py  download.py  main.py  transcript.py  utils.py  webvtt.py
tests/: test_core.py  test_download.py  test_language_subtitles.py  test_localized_urls.py  test_sample_code.py  test_transcript.py  test_url_validation.py  test_webvtt.py  webvtt_combine_test.py
